--- a/AccountProject/DataAccess/AccountProject.DataAccess.csproj
+++ b/AccountProject/DataAccess/AccountProject.DataAccess.csproj
@@ -133,12 +133,21 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="Entity\BankAccounts.cs" />
     <Compile Include="Entity\Transactions.cs" />
+    <Compile Include="Migrations\201512141006466_some.cs" />
+    <Compile Include="Migrations\201512141006466_some.Designer.cs">
+      <DependentUpon>201512141006466_some.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512141033239_RowVersion.cs" />
+    <Compile Include="Migrations\201512141033239_RowVersion.Designer.cs">
+      <DependentUpon>201512141033239_RowVersion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Repositories\impl\BankAccountRepository.cs" />
     <Compile Include="Repositories\IBankAccountRepository.cs" />
     <Compile Include="Repositories\IRepositoryBase.cs" />
     <Compile Include="Repositories\impl\RepositoryBase.cs" />
     <Compile Include="Entity\C__MigrationHistory.cs" />
-    <Compile Include="Entity\BankContext.cs" />
+    <Compile Include="Entity\BankAccountContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\impl\TransactionRepository.cs" />
@@ -149,6 +158,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201512141006466_some.resx">
+      <DependentUpon>201512141006466_some.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512141033239_RowVersion.resx">
+      <DependentUpon>201512141033239_RowVersion.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
